syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "pkg/protocol/core/commit/commit.proto";
import "pkg/protocol/core/config-item/config_item.proto";

package pbrci;

option go_package = "github.com/TencentBlueKing/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/released-ci;pbrci";

// ReleasedConfigItem source resource reference: pkg/dal/table/release_ci.go
message ReleasedConfigItem {
  uint32 id = 1;
  uint32 release_id = 2;
  uint32 commit_id = 3;
  pbcommit.ReleasedCommitSpec commit_spec = 4;
  uint32 config_item_id = 5;
  pbci.ConfigItemSpec spec = 6;
  pbci.ConfigItemAttachment attachment = 7;
  pbbase.Revision revision = 8;
}
